# new-materials-for-guacamole

./: .gitignore  CMakeLists.txt  fragment_pass_test.gpd  test.gmd  vertex_pass_test.gpd
include/: Database.hpp  GeometryResource.hpp  Material.hpp  MaterialDatabase.hpp  MaterialDescription.hpp  MaterialInstance.hpp  MaterialPass.hpp  Pipeline.hpp  PipelinePass.hpp  Shader.hpp  Uniform.hpp  string_utils.hpp
scripts/: new_materials.sublime-project
src/: Directory.cpp  Logger.cpp  Material.cpp  MaterialDatabase.cpp  MaterialDescription.cpp  MaterialInstance.cpp  MaterialPass.cpp  PathParser.cpp  TextFile.cpp  Uniform.cpp  main.cpp  string_utils.cpp
